--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             </fieldset><br>
             <input type="submit" value="SUBMIT">
-        
+            <br><a href="textags.html">Text tags</a>
         </div>
     </div>
 </body>
